syntax = "proto3";
option go_package="./;proto";
package calculator;

service Calculator {
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc Subtract(SubtractRequest) returns (SubtractResponse) {}
}

message AddRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message AddResponse {
  int32 result = 1;
}

message SubtractRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message SubtractResponse {
  int32 result = 1;
}